--- a/intermediate.html
+++ b/intermediate.html
@@ -9,21 +9,111 @@
 </head>
 <body>
     <div class="container">
-        <h1>
-            Nutration Facts
-        </h1>
+        <h1>Nutration Facts</h1>
         <p class="fullwidth">Serving size 1 cup(50)</p>
-        <p class="fullwidth border1" >Servings Pers Container 10</p>
-        <p class="col1 border2">Amount Per Serving</p>
-        <p class="col2 border2">Cereal</p>
-        <p class="col3 border2">with 1/2 Cup 1%</p>
-        <p class="col1 border2">Calories</p>
-        <p class="col2 border2">190</p>
-        <p class="col3 border2">250</p>
-        <p class="col1 border2">Calories from Fat</p>
-        <p class="col2 border2">35</p>
-        <p class="col3 border2">45</p>
+        <p class="fullwidth" >Servings Pers Container 10</p>
 
+        <div class="container3Columns">
+            <p class="border1"><br>Amount Per Serving</p>
+            <p class="border1"><br>Cereal</p>
+            <p class="border1">with 1/2 Cup 1% milk</p>
+            <p class="border2">Calories</p>
+            <p class="border2">190</p>
+            <p class="border2">250</p>
+            <p class="border2">Calories from Fat</p>
+            <p class="border2">35</p>
+            <p class="border2">45</p>
+            <p class="border1"></p> <!-- stays empty-->
+            <p class="flexEnd border1">% Daily </p>
+            <p class="flexEnd border1">Value**</p>
+            <p class="border2">Total Fat 4g*</p>
+            <p class="border2">6%</p>
+            <p class="border2">8%</p>
+            <p class="border3">Saturated Fat 1.5g</p>
+            <p class="border3">8%</p>
+            <p class="border3">13%</p>
+            <p class="border3">Trans Fat 0g</p>
+            <p class="border3"></p>
+            <p class="border3"></p>
+            <p class="border2">Cholesterol 0mg</p>
+            <p class="border2">0%</p>
+            <p class="border2">3%</p>
+            <p class="border2">Sodium 190mg</p>
+            <p class="border2">8%</p>
+            <p class="border2">11%</p>
+            <p class="border2">Total Carbohydrate 39g</p>
+            <p class="border2">13%</p>
+            <p class="border2">15%</p>
+            <p class="border3">Dietary Fiber 6g</p>
+            <p class="border3">24%</p>
+            <p class="border3">24%</p>
+            <p class="border3">Sugars 11g</p>
+            <p class="border3"></p>
+            <p class="border3"></p>
+            <p class="border2">Protein 4g</p>
+            <p class="border2"></p>
+            <p class="border2"></p>
+            <p class="border1">Vitamin A</p>
+            <p class="border1">0%</p>
+            <p class="border1">6%</p>
+            <p class="border2">Vitamin C</p>
+            <p class="border2">0%</p>
+            <p class="border2">2%</p>
+            <p class="border2">Calcium</p>
+            <p class="border2">2%</p>
+            <p class="border2">15%</p>
+            <p class="border2">Iron</p>
+            <p class="border2">6%</p>
+            <p class="border2">6%</p>
+        </div> <!-- container3Columns-->
+
+
+        <p class="text border2">*Amount In Cereal. With 1/2 cup 1% milk contributes an additional 60 Calories
+            (10 Calories from Fat), 1 g Total Fat (1 g Saturated Fat), 10 mg Cholesterol, 70 mg
+            Sodium, 7 g Total Carbohydrate (6 g Sugars), 5 g Protein.
+        </p>
+
+        <p class="text">** Percent Daily Values are based on a 2,000 calorie diet. 
+            Your daily values may be higher or lower depending on your calorie needs:
+        </p>
+
+        <div class="container4Columns">
+            <p></p>
+            <p>Calories:</p>
+            <p>2,000</p>
+            <p>2,500</p>
+            <p>Total Fat</p>
+            <p>Less than</p>
+            <p>65g</p>
+            <p>80g</p>
+            <p>Saturated Fat</p>
+            <p>Less than</p>
+            <p>20g</p>
+            <p>25g</p>
+            <p>Cholesterol</p>
+            <p>Less than</p>
+            <p>300mg</p>
+            <p>300mg</p>
+            <p>Sodium</p>
+            <p>Less than</p>
+            <p>2,400 mg</p>
+            <p>2,400 mg</p>
+            <p>Total Carbohydrate</p>
+            <p></p>
+            <p>300g</p>
+            <p>375g</p>
+            <p>Dietary Fiber</p>
+            <p></p>
+            <p>25g</p>
+            <p>30g</p>
+        </div>
+
+        <p class="text1">Calories per gram:</p>
+        <div class="text2container">
+            <p class="text2">Fat 9 &#8226;</p>
+            <p class="text2">Carbohydrate 4 &#8226;</p>
+            <p class="text2">Protein 4</p>
+        </div>
 
     </div>
 </body>
